# craftsql

./: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/objbridge/: Cargo.toml
crates/objbridge/src/: lib.rs
crates/objbridge/tests/: integration.rs
crates/objstore/: Cargo.toml
crates/objstore/src/: lib.rs
crates/store-cached/: Cargo.toml
crates/store-cached/src/: lib.rs
crates/store-local/: Cargo.toml
crates/store-local/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
docs/: CRAFTSQL_DESIGN.md
